- Schein komplett implementiert - Fehler hafte Programmierung in der Info behoben - Notifications verbessert (greift nich mehr auf Ressourcen zu --> kiene Abstürze mehr desswegen)

--- a/app/src/main/res/layout/fragment_arbeit.xml
+++ b/app/src/main/res/layout/fragment_arbeit.xml
@@ -122,7 +122,7 @@
                 android:layout_row="3"
                 android:layout_column="1"
                 android:layout_columnSpan="3"
-                android:labelFor="@+id/editTextArbeit"/>
+                />
 
             <EditText
                 android:layout_width="wrap_content"
@@ -133,13 +133,13 @@
                 android:layout_column="0"
                 android:layout_gravity="center_horizontal" />
 
-            <EditText
+            <TextView
                 android:layout_width="200sp"
                 android:layout_height="wrap_content"
 
-                android:id="@+id/editTextArbeit"
+                android:id="@+id/TextArbeit"
                 android:layout_gravity="center_horizontal"
-
+                android:background="@drawable/textlines"
                 android:layout_row="4"
                 android:layout_column="1"
                 android:layout_columnSpan="3"
