--- a/app/src/main/res/layout/fragment_pruefen.xml
+++ b/app/src/main/res/layout/fragment_pruefen.xml
@@ -1,23 +1,13 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Arbeits-Schein"
-        android:id="@+id/textViewUeberschrift"
-        android:textStyle="normal|bold"
-        android:textSize="22sp"
-
-        android:layout_gravity="center_horizontal" />
-
     <ScrollView
         android:id="@+id/layout"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:scrollbars="vertical|horizontal"
         android:layout_width="match_parent"
         android:layout_marginTop="0dip"
@@ -37,12 +27,20 @@
             android:id="@+id/ArbeitsscheinTabelle"
             android:layout_marginTop="0dip"
             >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Arbeits-Schein"
+                android:id="@+id/textViewUeberschrift"
+                android:textStyle="normal|bold"
+                android:textSize="22sp"
 
+                android:layout_gravity="center_horizontal" />
             <TableRow
                 android:id="@+id/Anschrift"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                >
+                android:layout_marginTop="5dp">
 
                 <TextView
                     android:layout_width="match_parent"
@@ -382,15 +380,18 @@
                     android:background="@android:color/transparent" />
             </TableRow>
 
-            <android.support.design.widget.FloatingActionButton
-                android:id="@+id/fab_next"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:backgroundTint="@color/hoell_blau"
-                android:src="@mipmap/ic_next"
-                app:elevation="6dp"
-                app:pressedTranslationZ="12dp"
-                android:layout_gravity="bottom|end"/>
+            <TableRow
+                android:id="@+id/tableRow11"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" >
+
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Prüfung Notwendig"
+                    android:id="@+id/checkBoxPruefen"
+                    android:layout_gravity="center_horizontal" />
+            </TableRow>
 
 
         </TableLayout>
@@ -400,5 +401,42 @@
 
     </ScrollView>
 
-</LinearLayout>
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="vertical" android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/linearLayout">
+
+    </LinearLayout>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_save"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:backgroundTint="@color/hoell_blau"
+        android:src="@drawable/ic_save_black_24dp"
+        app:elevation="6dp"
+        app:pressedTranslationZ="12dp"
+        android:layout_gravity="start|bottom"/>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_unterschrift"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:backgroundTint="@color/hoell_blau"
+        android:src="@drawable/ic_mode_edit_black_24dp"
+        app:elevation="6dp"
+        app:pressedTranslationZ="12dp"
+        android:layout_gravity="bottom|center_horizontal"/>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_end"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:backgroundTint="@color/hoell_blau"
+        android:src="@drawable/ic_check_black_24dp"
+        app:elevation="6dp"
+        app:pressedTranslationZ="12dp"
+        android:layout_gravity="end|bottom"/>
+
+</FrameLayout>
 
