--- a/app/src/main/res/layout/row_eteile.xml
+++ b/app/src/main/res/layout/row_eteile.xml
@@ -6,33 +6,33 @@
 
 
 
-        <EditText
+        <TextView
             android:layout_width="47dp"
             android:layout_height="wrap_content"
             android:text="Menge"
-            android:id="@+id/editTextMenge"
+            android:id="@+id/TextViewMenge"
             android:textStyle="normal"
             android:gravity="center_horizontal"
             android:inputType="number"
             android:background="@android:color/transparent"
             style="@style/Base.TextAppearance.AppCompat.Medium" />
 
-        <EditText
+        <TextView
             android:layout_width="123dp"
             android:layout_height="wrap_content"
             android:text="Teile-Nr"
-            android:id="@+id/editTextTeileNr"
+            android:id="@+id/TextViewTeileNr"
             android:textStyle="normal"
             android:layout_gravity="center_horizontal"
             android:gravity="center_horizontal"
             android:background="@android:color/transparent"
             style="@style/Base.TextAppearance.AppCompat.Medium" />
 
-        <EditText
+        <TextView
             android:layout_width="155dp"
             android:layout_height="wrap_content"
             android:text="Bezeichnung"
-            android:id="@+id/editTextBezeichnung"
+            android:id="@+id/TextViewBezeichnung"
             android:textStyle="normal"
             android:layout_gravity="center_horizontal"
             android:background="@android:color/transparent"
