--- a/app/src/main/res/layout/fragment_abschliessen.xml
+++ b/app/src/main/res/layout/fragment_abschliessen.xml
@@ -377,7 +377,8 @@
                     android:id="@+id/editTextBemerkung"
                     android:textStyle="normal"
                     android:layout_column="0"
-                    android:background="@android:color/transparent" />
+                    android:background="@android:color/transparent"
+                    android:hint="Bemerkung" />
             </TableRow>
 
             <TableRow
@@ -405,6 +406,19 @@
                     android:contentDescription="Sign pls"
                     android:background="@xml/img_background"
                     android:layout_gravity="top" />
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <EditText
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:id="@+id/editTextKlarname"
+                    android:layout_column="0"
+                    android:hint="Klarname" />
             </TableRow>
 
 
