--- a/app/src/main/res/layout/fragment_abschliessen.xml
+++ b/app/src/main/res/layout/fragment_abschliessen.xml
@@ -396,6 +396,20 @@
 
             <TableRow
                 android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <EditText
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:id="@+id/editTextEmail"
+                    android:layout_column="0"
+                    android:inputType="textEmailAddress"
+                    android:hint="email" />
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
                 android:layout_height="match_parent" >
 
                 <ImageView
@@ -420,7 +434,6 @@
                     android:layout_column="0"
                     android:hint="Klarname" />
             </TableRow>
-
 
         </TableLayout>
 
