--- a/app/src/main/res/layout/fragment_abschliessen.xml
+++ b/app/src/main/res/layout/fragment_abschliessen.xml
@@ -491,7 +491,7 @@
         android:src="@drawable/ic_save_black_24dp"
         app:elevation="6dp"
         app:pressedTranslationZ="12dp"
-        android:layout_gravity="start|bottom"/>
+        android:layout_gravity="top|end"/>
 
 </FrameLayout>
 
