--- a/app/src/main/res/layout/row_eteile.xml
+++ b/app/src/main/res/layout/row_eteile.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:baselineAligned="false"
+    android:descendantFocusability="blocksDescendants"
+    android:gravity="center_vertical" >
 
 
 
@@ -13,7 +16,7 @@
             android:id="@+id/TextViewMenge"
             android:textStyle="normal"
             android:gravity="center_horizontal"
-            android:inputType="number"
+            android:layout_gravity="center_horizontal"
             android:background="@android:color/transparent"
             style="@style/Base.TextAppearance.AppCompat.Medium" />
 
@@ -38,4 +41,10 @@
             android:background="@android:color/transparent"
             style="@style/Base.TextAppearance.AppCompat.Medium"
             android:gravity="end" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/TextViewSyncidTeile"
+        android:textStyle="normal"
+        android:visibility="gone" />
     </LinearLayout>
