--- a/app/src/main/res/layout/row_arbeit.xml
+++ b/app/src/main/res/layout/row_arbeit.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="wrap_content"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:baselineAligned="false"
+    android:descendantFocusability="blocksDescendants"
+    android:gravity="center_vertical" >
 
 
         <TextView
@@ -10,9 +13,7 @@
             android:text="2016-07-33"
             android:id="@+id/TextViewDatumContent"
             android:textStyle="normal"
-
             android:gravity="center_horizontal"
-            android:editable="true"
             android:background="@android:color/transparent"
             style="@style/Base.TextAppearance.AppCompat.Medium" />
 
@@ -22,10 +23,8 @@
             android:text="TechNr"
             android:id="@+id/TextViewTechNrContent"
             android:textStyle="normal"
-
             android:layout_gravity="center_horizontal"
             android:gravity="center_horizontal"
-            android:editable="true"
             android:background="@android:color/transparent"
             style="@style/Base.TextAppearance.AppCompat.Medium" />
 
@@ -35,9 +34,7 @@
             android:text="AW"
             android:id="@+id/TextViewAWContent"
             android:textStyle="normal"
-
             android:gravity="center_horizontal"
-            android:editable="true"
             android:background="@android:color/transparent"
             style="@style/Base.TextAppearance.AppCompat.Medium" />
 
@@ -47,10 +44,8 @@
             android:text="Weg"
             android:id="@+id/TextViewWegContent"
             android:textStyle="normal"
-
             android:layout_gravity="center_horizontal"
             android:gravity="center_horizontal"
-            android:editable="true"
             android:background="@android:color/transparent"
             style="@style/Base.TextAppearance.AppCompat.Medium" />
 
@@ -62,4 +57,16 @@
             android:textStyle="normal"
             android:background="@android:color/transparent"
             style="@style/Base.TextAppearance.AppCompat.Medium" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/TextViewSyncidArbeit"
+            android:textStyle="normal"
+            android:visibility="gone" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/TextViewArtnr"
+            android:textStyle="normal"
+            android:visibility="gone" />
     </LinearLayout>
